--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         padding: 0;
       }
     </style>
-    <title>Git Cours</title>
+    <title>Git Cours!!!!!!!!!!!</title>
   </head>
   <body>
     <h1>Hello Git</h1>
